feat: :construction_worker: Adjustments to support Decap CMS config

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -15,6 +15,8 @@ const { title, description } = Astro.props
 		<ClientRouter />
 		<link href="/pagefind/pagefind-ui.css" rel="stylesheet" />
 		<script is:inline src="/pagefind/pagefind-ui.js"></script>
+		<!-- Netlify Identity Widget for CMS authentication -->
+		<script is:inline src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 	</head>
 	<body>
 		<slot name="header">
