feat: :art: Added profile for kamal

--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -14,7 +14,7 @@ const teamData: ProfileAccordionItem[] = [
 			{ name: 'Yumnah Jafri', position: 'Communications', hasImage: false },
 			{ name: 'Ke Fan Bei', position: 'Communications', hasImage: false },
 			{ name: 'Renee Jing', position: 'Social Media Coordinator', hasImage: false },
-			{ name: 'Kamal Prajapati', position: 'Webmaster', hasImage: false },
+			{ name: 'Kamal Prajapati', position: 'Webmaster', hasImage: true },
 			{ name: 'Oliver Ojeda Valencia', position: 'Graphic Designer', hasImage: false },
 			{ name: 'Maurice Pasternak', position: 'Advisor', hasImage: true },
 			{ name: 'Willow Squires', position: 'Advisor', hasImage: true }
