feat: :art: Added profile photos for team 2025

--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -9,13 +9,13 @@ const teamData: ProfileAccordionItem[] = [
 		year: '2025 - 2026',
 		profiles: [
 			{ name: 'Ally Suarez', position: 'Director', hasImage: false },
-			{ name: 'Annie Pu', position: 'Data Analyst', hasImage: false },
+			{ name: 'Annie Pu', position: 'Data Analyst', hasImage: true },
 			{ name: 'Valerie Chow', position: 'Data Analyst', hasImage: false },
-			{ name: 'Yumnah Jafri', position: 'Communications', hasImage: false },
+			{ name: 'Yumnah Jafri', position: 'Communications', hasImage: true },
 			{ name: 'Ke Fan Bei', position: 'Communications', hasImage: false },
 			{ name: 'Renee Jing', position: 'Social Media Coordinator', hasImage: false },
 			{ name: 'Kamal Prajapati', position: 'Webmaster', hasImage: true },
-			{ name: 'Oliver Ojeda Valencia', position: 'Graphic Designer', hasImage: false },
+			{ name: 'Oliver Ojeda Valencia', position: 'Graphic Designer', hasImage: true },
 			{ name: 'Maurice Pasternak', position: 'Advisor', hasImage: true },
 			{ name: 'Willow Squires', position: 'Advisor', hasImage: true }
 		]
